force-app/src/objects/Annual_Figures__c.object
<CustomObject>
    <fields>
        <fullName>CIS_SSE_Nationality_3__c</fullName>
        <label>Enrolled Student Country/Region 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Num_of_grad_leavers_Country1__c</fullName>
        <label># Graduates Country/Region 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Num_of_grad_leavers_Country2__c</fullName>
        <label># Graduates Country/Region 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Num_of_grad_leavers_Country3__c</fullName>
        <label># Graduates Country/Region 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Number_of_leadership_staff__c</fullName>
        <inlineHelpText>Total number of staff on school&apos;s leadership team.</inlineHelpText>
        <label># Leadership Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Perc_tot_student_enrollment_nat1__c</fullName>
        <label>% Student Enrolment Country/Region 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Perc_tot_student_enrollment_nat2__c</fullName>
        <label>% Student Enrolment Country/Region 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Perc_tot_student_enrollment_nat3__c</fullName>
        <label>% Student Enrolment Country/Region 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Total_years_of_education__c</fullName>
        <description>Field available in Account.</description>
        <inlineHelpText>Total number of years of education your school provides.</inlineHelpText>
        <label>(777) Total years of education</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Year_most_recent_evaluation__c</fullName>
        <label>Year most recent evaluation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Year_next_evaluation__c</fullName>
        <label>Year next evaluation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_New_Record_After_Date__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()),08,31)</defaultValue>
        <inlineHelpText>This Date + 1 Year on Process Builder Action</inlineHelpText>
        <label>Create New Record After Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Boarding_Early_Childhood__c</fullName>
        <description>Divisional breakdown figure more important.</description>
        <inlineHelpText>Leave blank if your school doesn&apos;t offer Early Childhood Boarding.</inlineHelpText>
        <label>(777) Current Boarding Early Childhood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Boarding_Middle_School__c</fullName>
        <description>Divisional breakdown more relevant.</description>
        <inlineHelpText>Leave blank if your school doesn&apos;t offer Middle School Boarding.</inlineHelpText>
        <label>(777) Current Boarding Middle School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Boarding_Primary_Elementary__c</fullName>
        <description>Divisional breakdown more relevant.</description>
        <inlineHelpText>Leave blank if your school doesn&apos;t offer Primary/Elementary Boarding.</inlineHelpText>
        <label>(777) Current Boarding Primary/Elementar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Boarding_Senior_High_School__c</fullName>
        <description>Civisional breakdown more important.</description>
        <inlineHelpText>Leave blank if your school doesn&apos;t offer Senior/High School Boarding.</inlineHelpText>
        <label>(777) Current Boarding Senior/High Schoo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Students_Early_Childhood__c</fullName>
        <inlineHelpText>Total number of current students enrolled in Early Childhood division.
Leave blank if your school doesn&apos;t offer Early Childhood.</inlineHelpText>
        <label># Students - Early Childhood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Students_Middle_School__c</fullName>
        <inlineHelpText>Total number of current students enrolled in Middle School division.
Leave blank if your school doesn&apos;t offer Middle School.</inlineHelpText>
        <label># Students - Middle School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Students_Primary_Elementary__c</fullName>
        <inlineHelpText>Total number of current students enrolled in Primary/Elementary division.
Leave blank if your school doesn&apos;t offer Primary/Elementary.</inlineHelpText>
        <label># Students - Primary/Elementary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Students_Senior_High_School__c</fullName>
        <inlineHelpText>Total number of current students enrolled in Senior/High School division.
Leave blank if your school doesn&apos;t offer Senior/High School.</inlineHelpText>
        <label># Students - Senior/High School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_On_Membership_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Membership Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Membership_Directory_TE__c</fullName>
        <formula>Account__r.Current_Academic_Year_Figures__r.Id = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display on Membership Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_School__c</fullName>
        <formula>Account__r.Head_of_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head of School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>TEXT(Year__c)&amp;&apos;_&apos;&amp;CASESAFEID(Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_ACT_Score__c</fullName>
        <inlineHelpText>Only enter if ACT is required for international applicants.</inlineHelpText>
        <label>Minimum ACT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_SAT_Score__c</fullName>
        <inlineHelpText>Only enter if SAT is required for international applicants and use standard SAT score format (1230 or 1410 for example).</inlineHelpText>
        <label>Minimum SAT Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_FT_faculty_Early_chil__c</fullName>
        <inlineHelpText>Number of full-time Early Childhood staff with teaching credentials.</inlineHelpText>
        <label>Full-time faculty - Early Childhood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_contact__c</fullName>
        <formula>Account__r.npe01__One2OneContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAT_ACT_required__c</fullName>
        <inlineHelpText>SAT/ACT required for international applicants?</inlineHelpText>
        <label>SAT/ACT required for intl. applicants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Membership_Form_3__c</fullName>
        <formula>HYPERLINK(&quot;https://survey.cois.org/s3/School-Membership-Application-Form-3?Id=&quot; &amp;  Id  ,&quot;CIS School Membership Application Form 3&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Membership Form 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_name_text__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School name text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_nationalities_represented__c</fullName>
        <inlineHelpText>Total number of nationalities represented on faculty.</inlineHelpText>
        <label># Faculty Nationalities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Enrolment__c</fullName>
        <label>Undergraduate Enrolment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Select the academic year for the figures you are providing.</inlineHelpText>
        <label>Academic Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018 - 2019</fullName>
                </value>
                <value>
                    <fullName>2019 - 2020</fullName>
                </value>
                <value>
                    <fullName>2020 - 2021</fullName>
                </value>
                <value>
                    <fullName>2021 - 2022</fullName>
                </value>
                <value>
                    <fullName>2022 - 2023</fullName>
                </value>
                <value>
                    <fullName>2023 - 2024</fullName>
                </value>
                <value>
                    <fullName>2024 - 2025</fullName>
                    <default>true</default>
                    <label>2024 - 2025</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>int_undergrads_financial_aid_1st_year__c</fullName>
        <inlineHelpText>Total number of international undergraduates awarded financial aid or scholarships in first year. International student: An enrolled student who is not a citizen or resident of the country where the institution is located.</inlineHelpText>
        <label># Intl 1st Yr Undergrads Awarded Aid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_F_T_faculty_Middle_Sch__c</fullName>
        <inlineHelpText>Number of full-time Middle School staff with teaching credentials.</inlineHelpText>
        <label>Full-time faculty - Middle School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_F_T_faculty_Primary_Elementary__c</fullName>
        <inlineHelpText>Number of full-time Primary/Elementary staff with teaching credentials.</inlineHelpText>
        <label>Full-time faculty - Primary/Elementary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_F_T_faculty_Senior_Hig__c</fullName>
        <inlineHelpText>Number of full-time Senior/High School staff with teaching credentials.</inlineHelpText>
        <label>Full-time faculty - Senior/High School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_national_student_enrolment__c</fullName>
        <inlineHelpText>Percent of current students from country where school is physically located.</inlineHelpText>
        <label>% National students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_nationalities_represented_enrolment__c</fullName>
        <inlineHelpText>Number of nationalities represented across all enrolled students.</inlineHelpText>
        <label># Student Nationalities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_total_above_who_are_overse__c</fullName>
        <inlineHelpText>Percentage of faculty hired from outside the physical country where the school is located.</inlineHelpText>
        <label>% International faculty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>overseas_student_enrolment__c</fullName>
        <inlineHelpText>Percent of current students from outside the country where the school is physically located.</inlineHelpText>
        <label>% International students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>total_faculty_who_are_national_faculty__c</fullName>
        <inlineHelpText>Percentage of faculty who are from the country where the school is physically located.</inlineHelpText>
        <label>% National faculty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>total_nationalities_in_faculty__c</fullName>
        <label>(999) # total nationalities in faculty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Academic Year Figures</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Academic_Year_Figures</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Academic Year Figures</label>
        <sharedTo>
            <group>All_Community_Members</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Academic Year Figures</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Year Figures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Number_format_for_min_SAT_scores</fullName>
        <active>true</active>
        <description>Only original SAT scores number format  should be input.</description>
        <errorConditionFormula>AND(
   NOT(ISBLANK(Minimum_SAT_Score__c)),
   NOT(ISNUMBER(Minimum_SAT_Score__c ))
)</errorConditionFormula>
        <errorMessage>Please introduce original SAT score (1230 or 1410 for example)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_rule</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
    of_total_above_who_are_overse__c &gt; 1.0,
    of_total_above_who_are_overse__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_rulenationalfac</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
      total_faculty_who_are_national_faculty__c  &gt; 1.0,
    total_faculty_who_are_national_faculty__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_rulenationalstudents</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
     of_national_student_enrolment__c  &gt; 1.0,
    of_national_student_enrolment__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruleoverseas</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
     overseas_student_enrolment__c &gt; 1.0,
    overseas_student_enrolment__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruletotalstudent</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
      CIS_SSE_Perc_tot_student_enrollment_nat1__c  &gt; 1.0,
    CIS_SSE_Perc_tot_student_enrollment_nat1__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruletotalstudent2</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
       CIS_SSE_Perc_tot_student_enrollment_nat2__c  &gt; 1.0,
    CIS_SSE_Perc_tot_student_enrollment_nat2__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruletotalstudent3</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
        CIS_SSE_Perc_tot_student_enrollment_nat3__c  &gt; 1.0,
    CIS_SSE_Perc_tot_student_enrollment_nat3__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruletotalstudent4</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
         CIS_SSE_Perc_tot_student_enrollment_nat4__c   &gt; 1.0,
    CIS_SSE_Perc_tot_student_enrollment_nat4__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_ruletotalstudent5</fullName>
        <active>false</active>
        <description>To keep percentage fields under 100%</description>
        <errorConditionFormula>OR(
          CIS_SSE_Perc_tot_student_enrollment_nat5__c    &gt; 1.0,
    CIS_SSE_Perc_tot_student_enrollment_nat5__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>total_nationalities_in_faculty__c</errorDisplayField>
        <errorMessage>Please enter a percentage between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>